Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignIntObjInteger.quorum
class Main
    action Main
        integer v = 5
        Test(v)
    end

    action Test(Integer var)
        if var:GetValue() = 5
            output "passed"
        end
    end
end
