Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjInteger.quorum
class Main
    action Main
        integer v = 5
        Test(v)
    end

    action Test(Integer var)
    end
end
